client/src/styles/home.css
div.main {
  width: 100%;
  min-height: calc(100vh - 30px);
  background-color: var(--color-bg-cream);
  background-image:
    repeating-linear-gradient(
      45deg,
      rgba(120, 160, 255, 0.25) 0px,
      rgba(120, 160, 255, 0.25) 2px,
      transparent 2px,
      transparent 80px
    ),
    repeating-linear-gradient(
      -45deg,
      rgba(120, 160, 255, 0.25) 0px,
      rgba(120, 160, 255, 0.25) 2px,
      transparent 2px,
      transparent 60px
    );
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap-reverse;

  padding-top: 100px;
  padding-bottom: 100px;

  padding-left: 40px;
  padding-right: 40px;

  box-shadow: inset 0 0 100px #868779;

  row-gap: 40px;
  column-gap: 80px;
  position: relative;
}

h1.title {
  font-size: 48px;
  font-weight: 500;
  padding-bottom: 20px;
}

h2.title {
  padding-bottom: 60px;
}

button.app {
  border: none;
  border-radius: 25px;
  width: 120px;
  padding: 14px;
  background-color: var(--color-accent-red);
  color: var(--color-text-light);
  text-decoration: none;
  font-size: 16px;
  font-family: "Poppins";
  transition: 200ms ease-in-out;
}

button.app:hover {
  transform: scale(1.05);
  cursor: pointer;
}

button.app:active {
  filter: brightness(80%);
}

img.logo {
  width: 400px;
  max-width: 40vw;
  height: auto;
  aspect-ratio: 1 / 1;
}

@media screen and (max-width: 900px) {
  div.main {
    padding-top: 40px;
    padding-bottom: 40px;
    flex-direction: column-reverse;
  }

  div.left {
    text-align: center;
  }
}

div.featurelist {
  background-color: var(--color-bg-cream);
  width: 70%;
  margin: auto;
  overflow: hidden;

  padding: 20px;
  margin-bottom: 60px;
  column-gap: 20px;
  row-gap: 40px;

  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
  box-shadow: 20px 20px 60px #d9d5c1;

  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

div.feature {
  padding-top: 40px;
  padding-bottom: 40px;
  text-align: center;
}

i.feature {
  display: inline-block;
  font-size: 30px;
  padding-bottom: 20px;
}

h1.feature {
  font-size: 20px;
  font-weight: 500;
  padding-bottom: 15px;
  max-width: 300px;
  margin: auto;
}

p.feature {
  font-size: 16px;
  max-width: 250px;
  line-height: 20px;
  margin: auto;
}

.bubble {
  position: absolute;
  top: -150px;
  left: -100px;
  width: 550px;
  height: 500px;
  border-radius: 80%;
  pointer-events: none;
  z-index: -1;
  background: radial-gradient(circle, #ff9bb0, #ff8593, #e07080);
  filter: blur(80px);
  opacity: 0.6;
}

